--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Plateforme de vente en ligne - Créez votre compte et vendez vos produits facilement">
-  <title>MarketPlace - Vendez vos Produits</title>
+  <title>Yombleh - Vendez vos Produits</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="product-detail.css">
 </head>
 
 <body>
   <!-- Header -->
   <header>
     <div class="header-content">
-      <div class="logo">🛍️ MarketPlace</div>
+      <div class="logo">🛍️ Yombleh</div>
       <nav id="nav">
         <!-- Navigation dynamique -->
       </nav>
@@ -27,9 +28,8 @@
   <!-- Vue: Page d'Accueil -->
   <div id="home-view" class="view active">
     <div class="hero">
-      <h1>Vendez & Achetez en Toute Simplicité</h1>
-      <p>Créez votre compte vendeur, ajoutez vos produits et laissez vos clients vous contacter directement via WhatsApp
-      </p>
+      <h1>Bienvenue sur Yombleh</h1>
+      <p>La marketplace qui connecte vendeurs et acheteurs via WhatsApp</p>
       <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 2rem;">
         <button class="btn btn-primary" onclick="app.showView('login')">Se Connecter</button>
         <button class="btn btn-secondary" onclick="app.showView('register')">Créer un Compte</button>
@@ -206,6 +206,55 @@
             </button>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Vue: Détail Produit -->
+  <div id="product-detail-view" class="view">
+    <div class="container" style="padding-top: 2rem;">
+      <!-- Bouton retour -->
+      <button class="btn btn-secondary" onclick="app.closeProductDetail()" style="margin-bottom: 2rem;">
+        ← Retour au catalogue
+      </button>
+
+      <div class="product-detail-container">
+        <!-- Galerie d'images -->
+        <div class="product-gallery">
+          <div class="main-image-container">
+            <img id="detail-main-image" src="" alt="Produit" class="detail-main-image">
+            <button class="gallery-nav gallery-prev" onclick="app.previousImage()">‹</button>
+            <button class="gallery-nav gallery-next" onclick="app.nextImage()">›</button>
+          </div>
+          <div class="thumbnails-container" id="detail-thumbnails">
+            <!-- Miniatures générées dynamiquement -->
+          </div>
+        </div>
+
+        <!-- Informations produit -->
+        <div class="product-detail-info">
+          <h1 id="detail-product-name" class="detail-product-title"></h1>
+          <div id="detail-product-price" class="detail-product-price"></div>
+          <div id="detail-product-seller" class="detail-product-seller"></div>
+
+          <div class="detail-section">
+            <h3>Description</h3>
+            <p id="detail-product-description" class="detail-product-description"></p>
+          </div>
+
+          <button id="detail-whatsapp-btn" class="btn btn-success"
+            style="width: 100%; font-size: 1.1rem; padding: 1rem;">
+            💬 Commander via WhatsApp
+          </button>
+        </div>
+      </div>
+
+      <!-- Produits suggérés -->
+      <div class="suggestions-section">
+        <h2 class="text-center" style="margin-bottom: 2rem;">Produits Similaires</h2>
+        <div id="suggestions-grid" class="products-grid">
+          <!-- Suggestions générées dynamiquement -->
+        </div>
       </div>
     </div>
   </div>
